--- a/nginx.conf
+++ b/nginx.conf
@@ -8,4 +8,17 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
   }
+
+  # Evita bucle si favicon no existe
+  location = /favicon.ico {
+    try_files /favicon.ico =204;
+  }
+
+  # Opcional: mejor manejo de archivos estáticos
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|otf|map)$ {
+    try_files $uri =404;
+    access_log off;
+    expires 1M;
+    add_header Cache-Control "public";
+  }
 }
